# smith-waterman-alignment

./: .gitignore  CMakeLists.txt  ReadMe.md  genom.kdev4  plotSMSresults.py
src/: iostuff.cpp  iostuff.h  main.cpp  reference.cpp  result.cpp  result.h  smithwaterman.cpp  smithwaterman.h  task.cpp  task.h
